<resources>
    <string name="app_name">GOAT SAFE</string>
    <string name="er_detected">Detected Medical Center Entry!!</string>
    <string name="fall_detected">Fall Detected!!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Goat Safe</string>
    <string name="google_maps_key">AIzaSyDwgenGCbExA3FYLnCSSvMgzoRuyUI4vfY</string>
    <string name="location_string">" "</string>
    <string name="check_location">Mock Fall Detect</string>
    <string name="switch_on">Tracking On</string>
    <string name="switch_off">Tracking Off</string>
    <string name="button_okay">OKAY!</string>
    <string name="button_not_okay">NOT OKAY!</string>
    <string name="timer_text">SECONDS UNTIL EMERGENCY CONTACT</string>
    <string name="timer_secs">60</string>
    <string name="qr_code_text">User Health Info\n (Scan QR Code).</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="registration">Register</string>
    <string name="update_account">Update</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="enter_your_medical_history">enter your medical history</string>
    <string name="update_information">Update Information</string>
    <string name="update_title">Enter Changes and Click \'Update\'</string>
    <string name="emergency_contact_number">emergency_contact_number</string>
    <string name="logged_in_user_email">Logged in user email</string>
    <string name="maps_activity_would_be_here">Maps activity would be here</string>
    <string name="check_user_information">Check User Information</string>
    <string name="empty_for_now">empty for now</string>
    <string name="er_phone_hint">Emergency Contact Phone #</string>
    <string name="name_hint">Full Name</string>
    <string name="userphone_hint">User Phone #</string>
    <string name="emergency_contact_name_hint">Name of Emergency Contact</string>
    <string name="medical_prescripts_hint">Enter Prescriptions</string>
    <string name="medical_conditions_hint">Enter Users Medical Conditions</string>
    <string name="medical_provider_name_hint">Enter Users Doctor Name</string>
    <string name="medical_provider_phone_hint">Enter Users Doctor Phone#</string>
    <string name="acc_all_values">Accelerometer : x is %1$s, y is %2$s, z is %3$s</string>
    <string name="acc_value_text">Accelerometer Value :</string>
    <string name="acc_value">%1$s</string>
    <string name="acc_value_default">0</string>
    <string name="m_accel">mAccel :\n %1$s</string>
    <string name="recovery_timer_text">Recovery Timer : </string>
    <string name="timer">%1$s</string>
    <string name="timer_default">0</string>
    <string name="off">off</string>
    <string name="on">on</string>


</resources>