<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@color/grey"
    tools:context=".MapsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/grey">

        <TextView
            android:id="@+id/app_title"
            style="@style/AppText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="350dp"
            android:layout_height="350dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_title"
            app:layout_constraintBottom_toTopOf="@id/allTheNumbers_Text"
            tools:layout="@layout/activity_maps"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/acc_value_text"
            android:id="@+id/allTheNumbers_Text"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/allTheNumbers_Text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/acc_value_default"
            android:id="@+id/allTheNumbers"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovery_timer_text"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/allTheNumbers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/allTheOtherNumbers_Text"
            android:textColor="@color/white"
            android:textSize="24sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_default"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/allTheOtherNumbers_Text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/allTheOtherNumbers"
            android:textColor="@color/white"
            android:textSize="24sp"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text ="@string/switch_on"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/allTheOtherNumbers"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>