<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@color/grey"
    tools:context=".login">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/grey">


        <TextView
            android:id="@+id/app_title"
            style="@style/AppText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/app_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email_hint"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/email_field">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password_hint"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/filler"
            app:layout_constraintTop_toBottomOf="@id/password_field"
            android:textColor="@color/black"
            android:backgroundTint="#05F60F"/>

        <View
            android:id="@+id/filler"
            android:layout_width="80dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toEndOf="@+id/loginButton"
            app:layout_constraintEnd_toStartOf="@+id/toRegister"
            app:layout_constraintTop_toBottomOf="@id/password_field"/>


        <Button
            android:id="@+id/toRegister"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/registration"
            app:layout_constraintStart_toEndOf="@id/filler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_field"
            android:textColor="@color/black"
            android:backgroundTint="#05F60F" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>